Fixed the overlapped text in the card body

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -27,9 +27,9 @@
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 2px solid;
-  position: absolute;
-  top: 5px;
-  right: 15px;
+  // position: absolute;
+  // top: 5px;
+  // right: 15px;
   background-color: rgba(255,214,1,0.6);
   font-weight: bold;
 }
